
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_pip_lib"
version = "0.1.0"
description = "A simple example pip library"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
